# envguard

./: .gitignore  README.md  setup.cfg
envguard/: __main__.py  aliases.py  annotator.py  auditor.py  caster.py  census.py  classifier.py  cli.py  cli_aliases.py  cli_annotator.py  cli_census.py  cli_classifier.py  cli_comparator.py  cli_compressor.py  cli_depcheck.py  cli_differ_counts.py  cli_differ_encoding.py  cli_differ_format.py  cli_differ_keys.py  cli_differ_length.py  cli_differ_schema.py  cli_differ_semantic.py  cli_differ_sensitive.py  cli_differ_stats.py  cli_differ_summary.py  cli_differ_types.py  cli_differ_values.py  cli_digester.py  cli_duplicates.py  cli_enforcer.py  cli_freezer.py  cli_grapher.py  cli_grouper.py  cli_highlighter.py  cli_inspector.py  cli_linker.py  cli_migrator.py  cli_patcher.py  cli_pinner.py  cli_planner.py  (+93 more)
tests/: test_aliases.py  test_annotator.py  test_auditor.py  test_caster.py  test_census.py  test_classifier.py  test_cli.py  test_cli_census.py  test_cli_compressor.py  test_cli_differ_counts.py  test_cli_differ_format.py  test_cli_differ_keys.py  test_cli_differ_schema.py  test_cli_differ_schema_integration.py  test_cli_differ_semantic.py  test_cli_differ_sensitive.py  test_cli_differ_stats.py  test_cli_differ_stats_integration.py  test_cli_freezer.py  test_cli_grapher.py  test_cli_grapher_integration.py  test_cli_grouper.py  test_cli_grouper_integration.py  test_cli_highlighter.py  test_cli_inspector.py  test_cli_inspector_integration.py  test_cli_integration.py  test_cli_linker.py  test_cli_patcher.py  test_cli_pinner.py  (+90 more)
