[metadata]
name = envguard
version = 0.1.0
description = CLI tool to validate and diff .env files across environments
long_description = file: README.md
long_description_content_type = text/markdown
author = envguard contributors
license = MIT
python_requires = >=3.9

[options]
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    envguard = envguard.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov

[tool:pytest]
testpaths = tests
addopts = --tb=short
